--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "ws": "^8.16.0",
+    "xxhash-addon": "^2.0.2",
     "rotating-file-stream": "^3.1.1",
     "swagger-ui-express": "^5.0.0",
     "zod": "^3.22.4"
